--- a/cryptox/index.html
+++ b/cryptox/index.html
@@ -18,6 +18,18 @@
 </head>
 
 <body>
+    <!-- xBoot loader start -->
+    <div id="xboot-loader">
+        <div class="loader-wrapper">
+            <div class="loader-content">
+                <div class="loader-dot dot-four"></div>
+                <div class="loader-dot dot-three"></div>
+                <div class="loader-dot dot-two"></div>
+                <div class="loader-dot dot-one"></div>
+            </div>
+        </div>
+    </div>
+    <!-- xBoot loader End -->
     <!-- Main wrapper start -->
     <div class="wrapper">
         <!-- Header area start -->
@@ -35,12 +47,9 @@
                         </div>
                         <div class="col-sm-4 col-md-4">
                             <div class="header-top-right">
-                                <ul class="header-social-menu">
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                <ul class="user-area">
+                                    <li><a href="#"><i class="fa fa-user user-icon"></i>Login <i class="fa fa-caret-down"></i></i></a></li>
+                                    <li><a href="#"><i class="fa fa-edit user-icon"></i>Sign Up <i class="fa fa-caret-down"></i></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -58,29 +67,29 @@
                         <div class="col-lg-7 col-md-8 hidden-xs hidden-sm">
                             <nav class="xboot-menu">
                                 <ul class="main-menu">
-                                    <li><a href="#">Home<i class="fa fa-angle-down"></i></a>
+                                    <li><a href="#">Home<i class="fa fa-caret-down"></i></i></a>
                                         <ul>
-                                            <li><a href="index.html">cryptox - home 1</a></li>
-                                            <li><a href="index-2.html">cryptox - home 2</a></li>
-                                            <li><a href="index-3.html">cryptox - home 3</a></li>
+                                            <li><a href="index.html"><i class="fa fa-caret-right"></i> cryptox - home 1</a></li>
+                                            <li><a href="index-2.html"><i class="fa fa-caret-right"></i> cryptox - home 2</a></li>
+                                            <li><a href="index-3.html"><i class="fa fa-caret-right"></i> cryptox - home 3</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="services.html">Service</a></li>
-                                    <li><a href="#">pages<i class="fa fa-angle-down"></i></a>
+                                    <li><a href="#">pages<i class="fa fa-caret-down"></i></a>
                                         <ul>
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="contact.html">contact Us</a></li>
-                                            <li><a href="services.html">cryptox Service</a></li>
-                                            <li><a href="single-services.html">Single Service</a></li>
-                                            <li><a href="team.html">cryptox team</a></li>
+                                            <li><a href="about.html"><i class="fa fa-caret-right"></i>About Us</a></li>
+                                            <li><a href="contact.html"><i class="fa fa-caret-right"></i>contact Us</a></li>
+                                            <li><a href="services.html"><i class="fa fa-caret-right"></i>cryptox Service</a></li>
+                                            <li><a href="single-services.html"><i class="fa fa-caret-right"></i>Single Service</a></li>
+                                            <li><a href="team.html"><i class="fa fa-caret-right"></i>cryptox team</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">blog<i class="fa fa-angle-down"></i></a>
+                                    <li><a href="#">blog<i class="fa fa-caret-down"></i></a>
                                         <ul>
-                                            <li><a href="blog-left-sidebar.html">blog left sidebar</a></li>
-                                            <li><a href="blog-right-sidebar.html">blog right sidebar</a></li>
-                                            <li><a href="single-post.html">single blog post</a></li>
+                                            <li><a href="blog-left-sidebar.html"><i class="fa fa-caret-right"></i> blog left sidebar</a></li>
+                                            <li><a href="blog-right-sidebar.html"><i class="fa fa-caret-right"></i> blog right sidebar</a></li>
+                                            <li><a href="single-post.html"><i class="fa fa-caret-right"></i> single blog post</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">contact</a></li>
@@ -553,7 +562,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.2s">
                                 <div class="member-thumbnail">
-                                    <img src="img/team/team1.png" class="center-block img-responsive" alt="">
+                                    <img src="img/team/team1.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="member-content">
                                     <h4>Maddy Bowen</h4>
@@ -564,14 +573,14 @@
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>                                    
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="member-thumbnail">
-                                    <img src="img/team/team2.png" class="center-block img-responsive" alt="">
+                                    <img src="img/team/team2.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="member-content">
                                     <h4>dany archer</h4>
@@ -582,50 +591,50 @@
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>                                    
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.6s">
                                 <div class="member-thumbnail">
-                                    <img src="img/team/team4.png" class="center-block img-responsive" alt="">
+                                    <img src="img/team/team4.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="member-content">
                                     <h4>solomon vandy</h4>
-                                    <p>Designer</p>
+                                    <p>Programmer</p>
                                     <ul class="member-bookmark">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>                                    
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.6s">
+                            <div class="single-team-member team-style-2 wow fadeIn" data-wow-delay="0.8s">
                                 <div class="member-thumbnail">
-                                    <img src="img/team/team3.png" class="center-block img-responsive" alt="">
+                                    <img src="img/team/team3.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="member-content">
-                                    <h4>solomon vandy</h4>
-                                    <p>Designer</p>
+                                    <h4>Jack Dawson</h4>
+                                    <p>UI/UX Designer</p>
                                     <ul class="member-bookmark">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>                                    
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- xboot team section end -->              
+            <!-- xboot team section end -->
             <!-- testimonial area start -->
             <div class="xboot-section testimonial-section gray-bg">
                 <div class="container">
@@ -959,7 +968,7 @@
                                 <p>All copyright &copy; 2018 by <a href="http://www.wpfreethemeshop.com/" target="_blank">xBoot</a></p>
                             </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-sm-12">
                             <div class="footer-bottom-menu">
                                 <ul class="footer-main-menu">
                                     <li>
