--- a/cryptox/contact.html
+++ b/cryptox/contact.html
@@ -175,7 +175,7 @@
                                 <div class="col-md-12">
                                     <div class="contact-wrapper">
                                         <div class="contact-form">
-                                            <form id="xboot-contact-form" action="php/mail.php" method="POST" name="eve_message_form">
+                                            <form id="xboot-contact-form" action="php/mail.php" method="POST">
                                                 <div class="form-group">
                                                     <div class="row">
                                                         <div class="form-group">
@@ -404,7 +404,7 @@
     <!-- All JavaScript files included -->
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8hjTJwTaYk3q7cxbootZ9SNl5F9Ey6UPEhg"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdRm-dm4ImhzWxMOy1_TyY6cQ3ZnVpw9E"></script>
     <script src="js/scripts.js"></script>
 </body>
 
